# Orchestrator

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.prebuilt  PRODUCT.md  README.md  docker-compose.yml  script.md
.claude/: launch.json
.impeccable/live/: config.json
.orchestrator/: actions.yml
app/api/routes/: jobs.py
command-executor/: .dockerignore  Dockerfile  README.md  jobs.db  pyproject.toml
command-executor/app/: config.py  main.py  runner.py
command-executor/app/api/routes/: jobs.py
command-executor/app/db/: session.py
dashboard/: README.md  index.html  logs.html  package-lock.json  package.json  pipeline.html  tsconfig.json  vite.config.ts
dashboard/legacy/: index.html  styles.css
dashboard/src/: App.svelte  app.css
dashboard/src/lib/: api.ts  charts.ts  format.ts  logsteps.ts  mock.ts  poll.ts  router.ts  types.ts  yamlhl.ts
dashboard/src/lib/components/: Avatar.svelte  DeviceMonitor.svelte  Snackbar.svelte  StatusPill.svelte  StatusText.svelte  Strip.svelte  Topbar.svelte
dashboard/src/pages/: History.svelte  Login.svelte  Monitor.svelte  Overview.svelte  RepoDetail.svelte  Repos.svelte  RunDetail.svelte
nimesh/: README.md  main.py  nimesh.md  tempCodeRunnerFile.python
presentations/: Agile-Assignment-CICD-Orchestrator.docx  midterm-defense.pptx  ~$midterm-defense.pptx
scripts/: demo-pipeline.sh
src/: api.rs  coordinator.rs  forgejo.rs  main.rs  pipeline.rs  state.rs  store.rs  types.rs  worker.rs
yaml-parser/: bad_cycle.yml  bad_self_dep.yml  bad_stage.yml  cli.py  good.yml  models.py  parser.py  pipeline.yaml  pipeline.yml  plan_json.py  planner.py  pyproject.toml  test_invalid_pipeline.py  test_valid_pipeline.py  validator.py
