[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "json"] }
tempfile = "3"
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors", "fs"] }
